--- a/src/Product.css
+++ b/src/Product.css
@@ -6,8 +6,8 @@
 	margin: 10px;
 	padding: 20px;
 	width: 100%;
-	max-width: 100px;
-	max-height: 100px;
+	max-height: 400px;
+	min-width: 100px;
 	background-color: white;
 	z-index: 1;
 }
@@ -21,6 +21,10 @@
 
 .product__price {
 	margin-top: 5px;
+}
+
+.product__rating {
+	display: flex;
 }
 
 .product__info {
