--- a/src/CheckoutProduct.css
+++ b/src/CheckoutProduct.css
@@ -1,7 +1,8 @@
 .checkoutProduct {
 	display: flex;
-	margin-top: 20px;
-	margin-bottom: 20px;
+	padding-top: 12px;
+	padding-bottom: 12px;
+	border-bottom: 1px solid #ddd;
 }
 
 .checkoutProduct__info {
@@ -17,9 +18,17 @@
 }
 
 .checkoutProduct__image {
-	object-fit: contain;
 	width: 180px;
 	height: 180px;
+	margin-right: 16px;
+	flex-grow: 0;
+	flex-shrink: 0;
+}
+
+.checkoutProduct__image img {
+	object-fit: contain;
+	width: 100%;
+	height: 100%;
 }
 
 .checkoutProduct__rating {
